# chaserland-grpc-user-service

./: .gitignore  Jenkinsfile  main.py  pyproject.toml
chaserland_grpc_user_service/bootstrap/: app.py
chaserland_grpc_user_service/config/: app.py  github.py  logging.py
chaserland_grpc_user_service/providers/: lifespan.py  log.py  servicer.py
chaserland_grpc_user_service/utils/: AIOgRPCServer.py  interceptors.py
docker/: Dockerfile  Dockerfile.dockerignore
src/: main.py
src/api/github/: __init__.py  version.py
src/api/github/rest/: oauth_token.py  oauth_user.py
src/bootstrap/: app.py
src/chaserland_grpc_user_service/api/github/: base_url.py  exceptions.py  schemas.py
src/chaserland_grpc_user_service/api/github/rest/: oauth_token.py  oauth_user.py
src/chaserland_grpc_user_service/bootstrap/: app.py
src/chaserland_grpc_user_service/config/: app.py  jwt.py  logging.py
src/chaserland_grpc_user_service/core/: context.py
src/chaserland_grpc_user_service/db/: crud.py  database.py  models.py  schemas.py
src/chaserland_grpc_user_service/providers/: lifespan.py  log.py  oauth.py  servicer.py
src/chaserland_grpc_user_service/servicer/: user.py
src/chaserland_grpc_user_service/utils/: AIOgRPCServer.py  exception_handlers.py  interceptors.py  jwt.py  provider.py  ref.py  servicer.py
src/config/: db.py  logging.py
src/providers/: lifespan.py  log.py  oauth.py  servicer.py
src/servicer/: user.py
src/utils/: AIOgRPCServer.py  interceptors.py  provider.py  ref.py  servicer.py
