[tool.poetry]
name = "chaserland-grpc-user-service"
version = "0.1.0"
description = ""
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chaserland-grpc-proto = { git = "https://github.com/ChaserZ98/chaserland-grpc-proto.git", tag = "v0.2.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
