[tool.poetry]
name = "chaserland-grpc-user-service"
version = "0.1.0"
description = ""
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
chaserland-grpc-proto = { git = "https://github.com/ChaserZ98/chaserland-grpc-proto.git", tag = "v0.2.0" }
grpc-interceptor = "^0.15.4"
aiohttp = "^3.9.3"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
